# roscamp-repo-1

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
client/farm_admin_app/: index.html  sync.js
client/system_admin_app/: INTERFACES_HANDOFF.md  README.md  package.xml  setup.cfg  setup.py
client/system_admin_app/maps/: automato_map.pgm  automato_map.yaml
client/system_admin_app/proposals/: RobotMaintenanceCommand.srv
client/system_admin_app/system_admin_app/: config.py  main.py  mapdata.py
client/system_admin_app/system_admin_app/model/: history.py  state.py  thresholds.py
client/system_admin_app/system_admin_app/ros/: mock_acs.py  ros_worker.py  sim_publisher.py  telemetry_node.py
client/system_admin_app/system_admin_app/ui/: control_tab.py  dg_card.py  fleet_map.py  graph_panel.py  main_window.py  monitor_tab.py  servo_table.py  style.py
equip/automato_ws/: SETUP.md  TESTING.md  dashboard.sh  mycobot.repos  requirements.txt
equip/automato_ws/dg_web/: control_server.py  dg_ai_target.json  index.html
equip/automato_ws/docs/: Scenario1_Sequence Diagram.md  ai_ddagi_integration_test.md  ai_service_dev_env_setup.md  ai_service_interface_spec.md  ddagi_control_method.md  ddagi_selective_switching.md  scenario2_harvest_architecture.md  sprint4-minho_RP-64_confluence_report.md  sprint4-minho_RP-69_confluence_report.md  sprint4-minho_jira_RP-64.md  sprint4-minho_jira_RP-69.md
equip/automato_ws/src/automato_interfaces/: CMakeLists.txt  package.xml
equip/automato_ws/src/automato_interfaces/action/: DdagiHarvest.action  Dock.action  Harvest.action  Navigate.action  Patrol.action
equip/automato_ws/src/automato_interfaces/msg/: DdagiTelemetry.msg  DdagoTelemetry.msg  FleetMember.msg  FleetTelemetry.msg  HarvestTarget.msg  RobotTelemetry.msg  ServoStatus.msg  Waypoint.msg  WaypointGoal.msg
equip/automato_ws/src/automato_interfaces/srv/: AnalyzeFrame.srv  CaptureFrame.srv  SaveDetection.srv
equip/automato_ws/src/automato_interfaces/tcp/: ai_analysis.md
equip/automato_ws/src/ddagi_control/: package.xml  setup.cfg  setup.py
equip/automato_ws/src/ddagi_control/ddagi_control/: arm_controller.py  arm_hardware.py  arm_solver_direct.py  harvest_server.py  telemetry_publisher.py
equip/automato_ws/src/ddagi_control/test/: test_telemetry_publisher.py
equip/automato_ws/src/ddago_control/: package.xml  setup.cfg  setup.py
equip/automato_ws/src/ddago_control/ddago_control/: camera_node.py  dock_server.py  navigate_server.py  patrol_server.py  telemetry_publisher.py
equip/automato_ws/src/ddago_control/doc/: rp75_real_robot_test.md  rp76_real_robot_test.md
equip/automato_ws/src/ddago_control/launch/: ddago_bringup.launch.py  ddago_dock.launch.py  ddago_navigate.launch.py  ddago_patrol.launch.py  ddago_telemetry.launch.py  ddago_view.launch.py
equip/automato_ws/src/ddago_control/rviz/: ddago_view.rviz
equip/automato_ws/src/ddago_control/test/: test_camera.py  test_dock.py  test_navigate.py  test_patrol.py  test_telemetry.py
equip/automato_ws/src/dg_ai_service/: package.xml  setup.cfg  setup.py
equip/automato_ws/src/dg_ai_service/dg_ai_service/: analysis_server.py  camera_stream.py  (+3 more)
equip/automato_ws/src/dg_control/: README.md  package.xml  setup.cfg  setup.py
equip/automato_ws/src/dg_sim/: README.md  package.xml  setup.cfg  setup.py
equip/automato_ws/src/dg_sim/dg_sim/: acs_sim.py  ddagi_sim.py  ddago_sim.py  dg_ai_sim.py
equip/automato_ws/src/dg_sim/launch/: dg_sim.launch.py
equip/automato_ws/src/dg_sim/test/: test_e2e.py
equip/automato_ws/src/mycobot_280_pick/: package.xml  setup.cfg  setup.py
services/: README.md  SETUP.md  TESTING.md
services/automato_control_service/: .env.example  README.md  package.xml  requirements.txt  setup.cfg  setup.py
services/automato_control_service/automato_control_service/: automato_db.py  detection_db.py  detection_service.py  fleet_collector.py  fleet_telemetry_aggregator.py  fleet_telemetry_relay.py  internal_http.py  patrol_api.py  patrol_config.py  patrol_dispatcher.py  patrol_node.py  patrol_notify.py  routing_engine.py  telemetry_cache.py  telemetry_ws.py  telemetry_ws_node.py  traffic_debug.py
services/automato_control_service/automato_control_service/test_harness/: __init__.py  dg_stub.py  fake_telemetry.py  fleet_aggregator.py  patrol_bridge.py
services/automato_control_service/doc/: e0_e3_integration_prep.md  rp76_rp79_integration_test.md  rp77_test.md  rp78_field_test.md  rp79_field_test.md  scenario1_e1_sim_test.md
services/automato_control_service/launch/: acs_bringup.launch.py  fleet_telemetry_aggregator.launch.py  fleet_telemetry_relay.launch.py  patrol_e2e_sim.launch.py
services/automato_control_service/test/: test_detection_service.py  test_e4_return.py  test_fleet_aggregator.py  test_fleet_collector.py  test_fleet_relay.py  test_node_occupancy.py  test_patrol_availability.py  test_patrol_notify.py  test_patrol_pair_capture.py  test_routing_engine.py  test_slot_handoff.py  test_telemetry_availability.py
services/automato_control_service/verify_web/: README.md  fake_navigate.py  live.py  map_layout.py  server.py  sim.py
services/automato_control_service/verify_web/static/: app.js  index.html  style.css
services/automato_web_service/: README.md  app.py  farm_agent.py  mock_control_service.py  requirements.txt  selftest_chain.py  test_scenario1_live.py  web_log_tail.py
services/automato_web_service/docs/: Automato_WebService.postman_collection.json  INTEGRATION_README.md  배포_PythonAnywhere.md  시나리오1_라이브_버튼테스트.md  시나리오1_라이브_터미널2개_버튼가이드.md  시나리오1_통신테스트_가이드.md  원격농장_아키텍처_폴링릴레이.md
services/database/: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  requirements.txt  smoke_check.py
services/database/alembic/: env.py
services/database/alembic/versions/: 0001_initial_schema.py  0002_seed.py  0003_seed_corridors.py  0004_add_corridors_length.py  0005_add_corridors_16_19_18.py  0006_single_active_patrol.py  0007_add_robots_operational_status.py
services/docs/: Automato.postman_collection.json  test_flow.md  worklog_geonsulee_2026-07-02.md
(+13 files in other folders)
