<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddagi_control</name>
  <version>0.1.0</version>
  <description>Ddagi Control Service — 로봇팔 제어 노드</description>
  <maintainer email="finekim67@gmail.com">hskim</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>automato_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
